--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     text-decoration: none;
     background-color: rgb(36, 26, 26);
     color: white;
-    padding: 20px;
+    padding: 10px;
 }
 .nav a{
     text-decoration: none;
@@ -19,12 +19,13 @@
 }
 .nav button{
     background-color: yellow;
-    padding: 10px;
+    padding: 5px;
     color: black;
     font-size: 18px;
     border-radius: 8px;
     box-shadow: 30px;
-    margin-top: 10%;
+    width: 10%;
+    
     
 
 }
@@ -37,10 +38,14 @@
     display: flex;
     justify-content: center;
     margin-bottom: 2%;
-    margin: 10% 10%;
+    margin: 5% 8%;
     border:solid  #d4a4a4, #9fa7d8;
     background: linear-gradient(to bottom, #d4a4a4, #9fa7d8);
+    border-radius: 3%;
     
+}
+.order img{
+    margin-top: 10%;
 }
 .cont1{
     margin-bottom: 20%;
@@ -69,31 +74,159 @@
 
 }
 .div1{
-    border: solid aliceblue;
-    background-color: rgb(200, 206, 211);
-    padding: 20px;
+     border: solid aliceblue;
+    
+     padding: 50% 80% ,
+   ;
 }
 .heads{
     background-image: url("images/headsets.png");
-    border: solid;
     height: 30vh;
-    width: 20%;
+    width: 30%;
+    color: white;
     background-position: center; 
     background-size:contain ;
     background-repeat: no-repeat;
+    padding: 7%;
+    background-color: rgb(145, 233, 233);
   
 }
 .heads2{
-    background-image: url(images/camera.jpg);
-    border: solid;
+    background-image: url(images/camera-removebg-preview.png);
     height: 30vh;
-    width: 20%;
+    color: white;
+    width: 30%;
     background-position: center; 
     background-size:contain ;
     background-repeat: no-repeat;
+    padding: 7%;
+    background-color: #a07858;
 }
 .heads3{
     display: flex;
-    border: solid;
+    
+    width: 93%;
+    height: 40vh;
+    background: linear-gradient(to bottom, #d4a4a4, #9fa7d8);
+    text-align: center;
+    margin-left: 4%;
+    margin-top: 5%;
+    
     
 }
+.heads3 h2{
+    margin-top: 10%;
+    
+}
+.heads3 p{
+    margin-top: 6%;
+    margin-left: 4%;
+}
+.controllers{
+    margin-top: 6%;
+}
+
+
+.contr1{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+.imgs{
+    position: relative;
+    bottom: 80%;
+    left: 10%;
+}
+.sayings{
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
+    margin-left: 10%;
+
+}
+.sayings p{
+    font-size: 20px;
+    padding: 20px;
+    padding-top: 30px;
+}
+.sayings img{
+    width: 100%;
+    height: 30vh;
+}
+ #products{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 40px;
+    background-color:rgb(240, 236, 236);
+} 
+.productPrice{
+    border: solid rgb(225, 228, 235);
+    text-align:center;
+    border-radius: 3px;
+    margin-bottom: 1%;
+    background-color: #d3d5e4;
+} 
+.product-card {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    
+    background-color: #f8f6f6;
+  }
+  .product-card img {
+    width: 100px;
+    height: 100px;
+    margin-left: 40%;
+    border-radius: 50%;
+  }
+  .product-card h2 {
+    font-size: 16px;
+    margin-top: 10px;
+  }
+  .product-card .productPrice {
+    display: flex;
+    justify-content: space-between;
+  }
+  .product-card .productPrice p {
+    font-size: 14px;
+  }
+  .product-card .productPrice button {
+    background-color: #ecc515;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    
+  }
+  .testmonies{
+    text-align: center;
+  }
+  .footer{
+    display: flex;
+    gap: 14px;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    
+}
+
+.subscribe{
+    display: flex;
+    gap: 10%;
+
+    padding-top: 30px;
+    padding-bottom: 60px;
+   margin-left: 70px;
+}
+.subscribe button{
+    padding: 4%;
+    width: 300px;
+    background-color: #ecc515;
+}
+.spans{
+    color: #ecc515;
+}
+
+
